@@ -1,7 +1,8 @@
 Changes between 2.4.0 and X
 -----------------------------------
 
-
+- fix issue360: When using parser.addoption() unicode arguments to the
+  "type" keyword should also be converted to the respective types.
 
 Changes between 2.3.5 and 2.4
 -----------------------------------
